--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1115,6 +1115,7 @@ form.member-profile-form {
 		&.south {
 			border-top: 1px solid darken($tab-panel-texture-color,10%);
 			@include box-shadow($box-shadow-shine 0 1px 0px inset);
+			min-height: 25px;
 		}
 	}	
 	&.collapsed {
